Fix overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,11 @@
 html {
   scroll-behavior: smooth;
   font-size: 16px;
+}
+
+html,
+body,
+.app {
   overflow-x: hidden;
 }
 
